# shipay-user-crud

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  users.db
src/: containers.py  main.py
src/app/: role_service.py  user_service.py
src/controller/: dto.py  role.py  user.py
src/database/: test.sql
src/database/pg/: initial.sql  test.sql
src/database/sqlite/: initial.sql  test.sql
src/domain/role/: entity.py  exceptions.py
src/domain/user/: entity.py  exceptions.py
src/infra/postgres/: db.py  postgres_user_adapter.py
src/infra/sqlite/: __init__.py  db.py  sqlite_role_adapter.py  sqlite_user_adapter.py
src/ports/: role_repo.py  role_usecases.py  user_repo.py  user_usecases.py
src/ports/role/: role_repo.py  role_usecases.py
src/ports/user/: user_repo.py  user_usecases.py
src/tests/: test_role_api.py  test_user_api.py  test_user_entity.py  test_user_service.py
src/utils/: password.py
